# Reframe

./: .dockerignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  HTTPS-DEPLOYMENT.md  HTTPS-SETUP.md  README.md  build-web-ui.sh  cert-data.txt  roadmap.md
.github/workflows/: deploy-azure.yml  deploy-web-ui.yml
infrastructure/: azure-https-setup.bicep  azure-setup.bicep
scripts/: README.md  admin-register-providers.sh  deploy-https-manual.sh  fix-service-principal-permissions.sh  generate-test-cert.sh  register-azure-providers.sh  setup-azure.sh  setup-github-secrets.sh  setup-https.sh
specification/MT103/: MT103 MT103 STP to pacs.008-Table 1.csv  MT103_to_pacs008_Field_Mapping.md  Translation Preconditions-Table 1.csv  Translation Rules-Table 1.csv
src/: main.rs  parser.rs  publish.rs
static/: asset-manifest.json  index.html  manifest.json
static/static/css/: main.3be0c2e1.css  main.3be0c2e1.css.map
static/static/js/: main.20cff9a3.js  (+22 more)
web-ui/: .gitignore  README.md  package-lock.json  package.json
web-ui/public/: index.html
web-ui/src/: App.js  index.js
workflows/: 01-parse.json  02-mt103-bah-mapping.json  02-mt103-pacs008-mapping.json  03-mt103-document-mapping.json  03-mt103-precondition.json  03-mt192-camt056-mapping.json  04-mt103-combine-cbpr.json  04-mt103-document-mapping.json  04-mt196-camt029-mapping.json  05-mt103-combine-cbpr.json  05-mt202-pacs009-mapping.json  06-mt210-camt057-mapping.json  07-mt102-pacs008-mapping.json  08-mt103plus-pacs008-mapping.json  09-mt202cov-pacs009-mapping.json  README.md  mt103-pacs008-mapping.json
