[package]
name = "Reframe"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
anyhow = "1.0"
async-trait = "0.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.31", features = ["serialize"] }  # For XML serialization

dataflow-rs = "0.1.17"
swift-mt-message = "2.0.4"
# swift-mt-message = { path = "../SwiftMTMessage/swift-mt-message" }
mx-message = "0.1.8"